fixed one student to multiple groups and added seeGroup(one course, multiple group)